--- a/src/Eccube/Resource/template/admin/Product/csv_product.twig
+++ b/src/Eccube/Resource/template/admin/Product/csv_product.twig
@@ -64,28 +64,28 @@ $(function() {
 {% endblock javascript %}
 
 {% block main %}
-<div class="row">
+<div id="product_csv_upload" class="row">
     <div class="col-md-12">
         <form id="upload-form" class="form-inline" method="post" action="{{ url('admin_product_csv_import') }}" {{ form_enctype(form) }}>
             {{ form_widget(form._token) }}
-            <div class="box">
-                <div class="box-header">
+            <div id="product_csv_upload__box" class="box">
+                <div id="product_csv_header" class="box-header">
                     <h3 class="box-title">商品登録CSV</h3>
                 </div><!-- /.box-header -->
-                <div class="box-body">
+                <div id="product_csv_body" class="box-body">
                     <div class="form-group">
-                        <label class="col-sm-5 control-label">CSVファイル選択</label>
-                        <div class="col-sm-7">
+                        <label id="product_csv_body__label" class="col-sm-5 control-label">CSVファイル選択</label>
+                        <div id="product_csv_body__file" class="col-sm-7">
                             {{ form_widget(form.import_file, {'attr': {'accept': 'text/csv,text/tsv'}}) }}
                             {{ form_errors(form.import_file) }}
                         </div>
                         {% for error in errors %}
-                            <div class="text-danger">{{ error.message }}</div>
+                            <div id="product_csv_body__error" class="text-danger">{{ error.message }}</div>
                         {% endfor %}
                     </div>
                     <div id="spinner"></div>
                 </div><!-- /.box-body -->
-                <div class="box-footer text-center">
+                <div id="product_csv_upload__button_area" class="box-footer text-center">
                     <button id="upload-button" type="submit" class="btn btn-primary btn-sm">CSVファイルのアップロード</button>
                 </div><!-- /.box-footer -->
             </div><!-- /.box -->
@@ -93,26 +93,26 @@ $(function() {
     </div><!-- /.col -->
 </div>
 
-<div class="row">
+<div id="product_csv_file_format" class="row">
     <div class="col-md-12">
         <div class="box">
-            <div class="box-header">
+            <div id="product_csv_file_format__head" class="box-header">
                 <a href="{{ url('admin_product_csv_template', {'type': 'product'}) }}" id="download-button" class="btn btn-default pull-right btn-xs">雛形ファイルダウンロード</a>
                 <h3 class="box-title">商品登録CSVファイルフォーマット</h3>
             </div><!-- /.box-header -->
-            <div class="box-body no-padding">
+            <div id="product_csv_file_format__body" class="box-body no-padding">
                 <div class="table_list">
                     <div class="table-responsive no-border table-menu table-responsive-overflow">
                         <table class="table table-striped">
                             <thead>
-                                <tr class="text-nowrap">
+                                <tr id="file_format__head" class="text-nowrap">
                                     {% for header in headers|keys %}
                                         <th>{{ header }}</th>
                                     {% endfor %}
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr class="text-nowrap">
+                                <tr id="file_format__body" class="text-nowrap">
                                     <td>新規登録時は未設定<br>既存商品の更新は商品IDを設定</td>
                                     <td>必須</td>
                                     <td>必須</td>
